--- a/public/css/user.less
+++ b/public/css/user.less
@@ -41,19 +41,24 @@
       background-color: @apos-primary;
     }
 
+    .apos-pieces-import-error-message
+    {
+      list-style-type: disc;
+    }
+
     input
     {
       background-color: lighten(@apos-primary, 5%);
       display: inline-block;
       padding: 24px;
     }
-    
+
     h3
     {
       font-size: 24px;
       margin-bottom: 24px;
     }
-    
+
     table
     {
       td, th {
@@ -63,5 +68,5 @@
     }
 
   }
-  
+
 }
